# spark-pipelines

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Geisinger Placeholders.ipynb  README.md  SPEC.md  Taskfile.yml  create-docs.md  cz.toml  pyproject.toml
.memories/: context.md
.memories/knowledge/: _index.md  architecture.md  build-and-dev.md  cli-and-runtime.md  databricks-namespacing.md  dependencies.md  documentation.md  features-and-registry.md  outputs-and-layout.md  pipeline-spec.md  profiling-notebook.md  semantic-contract.md  testing.md
.memories/sessions/: 2026-01-12-1300-compiler-bootstrap.md  2026-01-12-1603-compiler-runtime-tests.md  2026-01-12-2013-readme-example.md  2026-01-13-1026-docs-refresh.md  2026-01-13-1142-testing-coverage.md  2026-01-13-2329-typecheck-cleanup.md  2026-01-14-1149-databricks-namespacing.md
.quint/: context.md  quint.db
docs/: README.md  api-reference.md  architecture.md  features.md  mapping.md  overview.md  pipeline.md  profiling.md  runtime.md  testing.md  troubleshooting.md
example/: generate_data.py  pipeline.yaml  run_duckdb.py
example/data/: patients.csv
src/spark_preprocessor/: __init__.py  cli.py  compiler.py  errors.py  model_naming.py  profiling.py  scaffold.py  schema.py  semantic_contract.py  sqlmesh_project.py
src/spark_preprocessor/features/: __init__.py  base.py  builtins.py  geisinger.py  registry.py
src/spark_preprocessor/runtime/: __init__.py  apply_pipeline.py
tests/: conftest.py  test_compiler.py  test_sqlmesh_duckdb.py
tests/integration/: test_compiler.py  test_sqlmesh_duckdb.py
tests/unit/: test_apply_pipeline.py  test_builtins.py  test_cli.py  test_compiler.py  test_geisinger_demographics.py  test_profiling.py  test_registry.py  test_scaffold.py  test_schema.py  test_semantic_contract.py  test_sqlmesh_project.py
