[project]
name = "spark-preprocessor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "camhpj", email = "camhpjohnson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlglot>=28.5.0",
    "ydata-profiling>=4.18.0",
]

[project.scripts]
spark-preprocessor = "spark_preprocessor:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "ipython>=9.9.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
